--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -108,7 +108,7 @@ library
         containers -any,
         parallel-io -any,
         mtl -any,
-        dhall <=1.14.0,
+        dhall >=1.14.0,
         ansi-wl-pprint -any,
         shake-ats >=1.8.0.0,
         shake-ext >=2.6.0.0,
