--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,8 @@ script:
   - mv $BINPATH2 atsfmt-$TARGET
   - mv $BINPATH3 hs2ats-$TARGET
   - strip atspkg-$TARGET
+  - strip atsfmt-$TARGET
+  - strip hs2ats-$TARGET
   - du -h atspkg-$TARGET
   - cd ats-pkg/test/data/hello-world
   - ../../../../atspkg-$TARGET run -vv
