--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -111,7 +111,8 @@ library
         dhall >=1.14.0,
         ansi-wl-pprint -any,
         shake-ats >=1.8.0.0,
-        shake-ext >=2.6.0.0,
+        shake-ext >=3.0.0.0,
+        shake-c,
         composition-prelude >=1.3.0.0,
         zip-archive -any,
         ansi-wl-pprint -any,
