--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -112,7 +112,7 @@ library
         ansi-wl-pprint -any,
         shake-ats >=1.8.0.0,
         shake-ext >=3.0.0.0,
-        shake-c,
+        shake-c -any,
         composition-prelude >=1.3.0.0,
         zip-archive -any,
         ansi-wl-pprint -any,
@@ -125,6 +125,10 @@ library
     if !os(windows)
         build-depends:
             unix -any
+    
+    if os(windows)
+        build-depends:
+            Win32 -any
     
     if (flag(development) && impl(ghc <8.4))
         ghc-options: -Werror
