--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -35,7 +35,7 @@ library
     default-language: Haskell2010
     other-extensions: DeriveAnyClass DeriveGeneric OverloadedStrings
                       DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
-                      OverloadedStrings TemplateHaskell TypeFamilies TupleSections
+                      OverloadedStrings TypeFamilies TupleSections
     ghc-options: -Wall
     build-depends:
         base >=4.8 && <5,
