--- a/ats-format/ats-format.cabal
+++ b/ats-format/ats-format.cabal
@@ -13,6 +13,7 @@ category: Parser, Language, ATS, Development
 build-type: Custom
 extra-source-files:
     man/atsfmt.1
+    .atsfmt.toml
 extra-doc-files: README.md
 
 source-repository head
@@ -42,6 +43,7 @@ executable atsfmt
         Paths_ats_format
     default-language: Haskell2010
     ghc-options: -Wall
+    other-extensions: OverloadedStrings TemplateHaskell
     build-depends:
         base >=4.9 && <5,
         language-ats >=0.1.1.10,
@@ -51,7 +53,8 @@ executable atsfmt
         ansi-wl-pprint -any,
         directory -any,
         unordered-containers -any,
-        process -any
+        process -any,
+        file-embed -any
     
     if flag(development)
         ghc-options: -Werror
