--- a/cabal.project
+++ b/cabal.project
@@ -1,11 +1,11 @@
-packages: language-ats
+packages: cdeps
+        , language-ats
         , ats-pkg
         , ats-format
         , shake-ext
         , shake-ats
         , dependency
         , hs2ats
-        , cdeps
         , shake-cabal
         , shake-c
 
