--- a/shake-c/shake-c.cabal
+++ b/shake-c/shake-c.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-c
-version: 0.1.0.0
+version: 0.2.0.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -30,8 +30,7 @@ library
         Development.Shake.C
     hs-source-dirs: src
     default-language: Haskell2010
-    other-extensions: DeriveAnyClass DeriveGeneric DerivingStrategies
-                      GeneralizedNewtypeDeriving PatternSynonyms TypeFamilies
+    other-extensions: DeriveAnyClass DeriveGeneric
     ghc-options: -Wall
     build-depends:
         base >=4.3 && <5,
