--- a/shake-ext/shake-ext.cabal
+++ b/shake-ext/shake-ext.cabal
@@ -36,10 +36,15 @@ library
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
-        base >=4.9 && <5,
+        base >=4.8 && <5,
         directory -any,
         shake >=0.14
     
+    if !impl(ghc >= 8.0)
+        build-depends: transformers
+                     , semigroups
+
+    if impl(ghc >=8.0)
     if flag(development)
         ghc-options: -Werror
     
