--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: cdeps
-version: 0.1.1.2
+version: 0.1.1.3
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -47,10 +47,11 @@ library
     if flag(development)
         ghc-options: -Werror
     
-    if !impl(ghc >= 8.0)
-        build-depends: transformers
-                     , semigroups
-
+    if !impl(ghc >=8.0)
+        build-depends:
+            transformers -any,
+            semigroups -any
+    
     if impl(ghc >=8.0)
         ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
     
