--- a/cabal.project
+++ b/cabal.project
@@ -17,11 +17,15 @@ constraints:
   shake-ats +development,
   ats-setup +development,
   dependency +development,
-  hs2ats +development -no-executable,
-  cdeps +development -no-executable,
+  hs2ats +development,
+  cdeps +development,
   shake-cabal +development,
   shake-c +development,
-  micro-recursion-schemes -template-haskell
+  micro-recursion-schemes -template-haskell,
+  reflection -template-haskell,
+  lens -template-haskell
+
+executable-stripping: true
 
 optimization: 2
 tests: True
