--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -79,7 +79,7 @@ library
     ghc-options: -Wall -Wincomplete-uni-patterns
                  -Wincomplete-record-updates
     build-depends:
-        base >=4.9 && <5,
+        base >=4.11 && <5,
         http-client -any,
         bytestring -any,
         file-embed -any,
@@ -115,7 +115,7 @@ library
         build-depends:
             unix -any
     
-    if (flag(development) && impl(ghc <8.4))
+    if flag(development)
         ghc-options: -Werror
 
 executable atspkg
@@ -128,7 +128,7 @@ executable atspkg
                  -with-rtsopts=-I0 -Wincomplete-uni-patterns
                  -Wincomplete-record-updates
     build-depends:
-        base -any,
+        base >=4.11,
         ats-pkg -any,
         optparse-applicative -any,
         shake-ats -any,
