--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: cdeps
-version: 0.1.1.4
+version: 0.1.1.5
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -61,11 +61,11 @@ executable cdeps
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
-        base -any,
+        base >=4.11 && <5,
         cdeps -any,
         optparse-applicative -any
     
-    if (flag(development) && impl(ghc <8.4))
+    if flag(development)
         ghc-options: -Werror
     
     if impl(ghc >=8.0)
