--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -36,9 +36,10 @@ library
     other-extensions: DeriveAnyClass DeriveGeneric OverloadedStrings
                       DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
                       OverloadedStrings TypeFamilies TupleSections
-    ghc-options: -Wall
+    ghc-options: -Wall -Wincomplete-uni-patterns
+                 -Wincomplete-record-updates -Wcompat
     build-depends:
-        base >=4.8 && <5,
+        base >=4.11 && <5,
         ansi-wl-pprint -any,
         containers >=0.5.9,
         microlens -any,
@@ -52,16 +53,8 @@ library
         build-depends:
             recursion-schemes >=5.0.1
     
-    if impl(ghc <8.0)
-        build-depends:
-            semigroups -any
-    
-    if (flag(development) && impl(ghc <8.4))
+    if flag(development)
         ghc-options: -Werror
-    
-    if impl(ghc >=8.0)
-        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
-                     -Wcompat
 
 test-suite dependency-test
     type: exitcode-stdio-1.0
@@ -70,6 +63,7 @@ test-suite dependency-test
     default-language: Haskell2010
     other-extensions: TupleSections
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+                 -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
     build-depends:
         base -any,
         dependency -any,
@@ -78,10 +72,6 @@ test-suite dependency-test
     
     if flag(development)
         ghc-options: -Werror
-    
-    if impl(ghc >=8.0)
-        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
-                     -Wcompat
 
 benchmark dependency-bench
     type: exitcode-stdio-1.0
@@ -89,7 +79,8 @@ benchmark dependency-bench
     hs-source-dirs: bench
     default-language: Haskell2010
     other-extensions: TupleSections
-    ghc-options: -Wall
+    ghc-options: -Wall -Wincomplete-uni-patterns
+                 -Wincomplete-record-updates -Wcompat
     build-depends:
         base -any,
         dependency -any,
@@ -98,7 +89,3 @@ benchmark dependency-bench
     
     if flag(development)
         ghc-options: -Werror
-    
-    if impl(ghc >=8.0)
-        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
-                     -Wcompat
