--- a/cabal.project
+++ b/cabal.project
@@ -32,3 +32,15 @@ optimization: 2
 program-options
   happy-options: -gcsa
   alex-options: -g
+
+-- allow-newer:
+    -- base
+    -- template-haskell
+    -- stm
+
+max-backjumps: 120000
+
+-- source-repository-package
+    -- type: git
+    -- location: https://github.com/haskell/stm
+    -- tag: 4c24db6071fc1319232934562f7dbed45d498831
