--- a/dependency/dependency.cabal
+++ b/dependency/dependency.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: dependency
-version: 1.2.0.0
+version: 1.2.0.1
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -26,7 +26,6 @@ flag development
 library
     exposed-modules:
         Data.Dependency
-    build-tools: cpphs -any
     hs-source-dirs: src
     other-modules:
         Data.Dependency.Type
@@ -44,14 +43,8 @@ library
         containers >=0.5.9,
         microlens -any,
         binary -any,
-        deepseq -any
-    
-    if impl(ghc >=8.2)
-        build-depends:
-            micro-recursion-schemes -any
-    else
-        build-depends:
-            recursion-schemes >=5.0.1
+        deepseq -any,
+        micro-recursion-schemes -any
     
     if flag(development)
         ghc-options: -Werror
