--- a/shake-ats/shake-ats.cabal
+++ b/shake-ats/shake-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-ats
-version: 1.9.0.1
+version: 1.9.0.2
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -49,7 +49,7 @@ library
         shake >=0.14,
         binary -any,
         shake-cabal -any,
-        shake-c -any
+        shake-c >=0.4.0.0
     
     if flag(development)
         ghc-options: -Werror
