--- a/shake-c/shake-c.cabal
+++ b/shake-c/shake-c.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: shake-c
-version: 0.3.0.0
+version: 0.4.0.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -35,7 +35,7 @@ library
         base >=4.3 && <5,
         shake >=0.14,
         cdeps -any,
-        composition-prelude
+        composition-prelude -any
     
     if flag(development)
         ghc-options: -Werror
