--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -126,7 +126,8 @@ library quaalude
         bytestring -any,
         composition-prelude >=1.3.0.0,
         binary -any,
-        text -any
+        text -any,
+        mtl
     
     if flag(development)
         cpp-options: -DDEBUG
