--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -38,9 +38,11 @@ library
         Language.ATS.Parser
         Language.ATS.PrettyPrint
         Language.ATS.Types
+        Language.ATS.Types.Lens
+        Language.ATS.Rewrite
     default-language: Haskell2010
     other-extensions: OverloadedStrings DeriveGeneric DeriveAnyClass
-                      FlexibleContexts FlexibleInstances PatternSynonyms
+                      FlexibleContexts FlexibleInstances
                       StandaloneDeriving GeneralizedNewtypeDeriving DerivingStrategies
                       DuplicateRecordFields DeriveFunctor TypeFamilies
     ghc-options: -Wall
