--- a/cabal.project
+++ b/cabal.project
@@ -21,9 +21,8 @@ constraints:
   cdeps +development,
   shake-cabal +development,
   shake-c +development,
-  micro-recursion-schemes -template-haskell,
-  reflection -template-haskell,
-  tar >= 0.5.1.0
+  recursion-schemes -template-haskell,
+  reflection -template-haskell
 
 executable-stripping: true
 
@@ -33,14 +32,4 @@ program-options
   happy-options: -gcsa
   alex-options: -g
 
--- allow-newer:
-    -- base
-    -- template-haskell
-    -- stm
-
 max-backjumps: 120000
-
--- source-repository-package
-    -- type: git
-    -- location: https://github.com/haskell/stm
-    -- tag: 4c24db6071fc1319232934562f7dbed45d498831
