--- a/language-ats/language-ats.cabal
+++ b/language-ats/language-ats.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: language-ats
-version: 1.2.0.16
+version: 1.2.1.0
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -42,10 +42,10 @@ library
         Language.ATS.Rewrite
     default-language: Haskell2010
     other-extensions: OverloadedStrings DeriveGeneric DeriveAnyClass
-                      FlexibleContexts FlexibleInstances
+                      FlexibleContexts FlexibleInstances PatternSynonyms
                       StandaloneDeriving GeneralizedNewtypeDeriving DerivingStrategies
                       DuplicateRecordFields DeriveFunctor TypeFamilies
-    ghc-options: -Wall
+    ghc-options: -Wall -O2
     build-depends:
         base >=4.9 && <5,
         array -any,
@@ -88,7 +88,7 @@ benchmark language-ats-bench
     main-is: Bench.hs
     hs-source-dirs: bench
     default-language: Haskell2010
-    ghc-options: -Wall
+    ghc-options: -Wall -O2
     build-depends:
         base -any,
         language-ats -any,
