--- a/cdeps/cdeps.cabal
+++ b/cdeps/cdeps.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 name: cdeps
-version: 0.1.1.7
+version: 0.1.1.8
 license: BSD3
 license-file: LICENSE
 copyright: Copyright: (c) 2018 Vanessa McHale
@@ -8,10 +8,11 @@ maintainer: vamchale@gmail.com
 author: Vanessa McHale
 synopsis: Extract dependencies from C code.
 description:
-    This package provides the ability to extract dependencies from C code, for use with [shake](https://shakebuild.com) or otherwise.
+    This package provides the ability to extract dependencies from C code, for use with [shake](https://shakebuild.com) or otherwise. This can also be used to extract dependencies from Haskell source using the C preprocessor.
 category: Development, C, Language
 build-type: Simple
 extra-doc-files: README.md
+                 CHANGELOG.md
 
 source-repository head
     type: git
