--- a/ats-format/ats-format.cabal
+++ b/ats-format/ats-format.cabal
@@ -23,7 +23,8 @@ source-repository head
 custom-setup
     setup-depends: base -any,
                    Cabal -any,
-                   cli-setup >=0.1.0.2
+                   cli-setup >=0.1.0.2,
+                   filepath -any
 
 flag static
     description:
@@ -42,8 +43,8 @@ executable atsfmt
     other-modules:
         Paths_ats_format
     default-language: Haskell2010
-    ghc-options: -Wall
     other-extensions: OverloadedStrings TemplateHaskell
+    ghc-options: -Wall
     build-depends:
         base >=4.9 && <5,
         language-ats >=0.1.1.10,
