--- a/ats-format/ats-format.cabal
+++ b/ats-format/ats-format.cabal
@@ -39,7 +39,7 @@ flag development
 
 executable atsfmt
     main-is: Main.hs
-    hs-source-dirs: app
+    hs-source-dirs: src
     other-modules:
         Paths_ats_format
     default-language: Haskell2010
