--- a/.travis.yml
+++ b/.travis.yml
@@ -56,8 +56,8 @@ before_install:
     cabal new-update
   fi
 
-install:
-- cabal new-build all --dependencies-only
+  #install:
+  #- cabal new-build all --dependencies-only
 
 script:
 - rm -rf dist-newstyle
