--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ language-ats/test/data/* linguist-vendored
 hs2ats/test/data/* linguist-vendored
 *.y linguist-language=Happy
 *.x linguist-language=Alex
+*.cpphs linguist-language=Haskell
