--- a/ats-pkg/ats-pkg.cabal
+++ b/ats-pkg/ats-pkg.cabal
@@ -19,6 +19,7 @@ extra-source-files:
     dhall/config.dhall
     dhall/atslib.dhall
     dhall/atspkg-prelude.dhall
+    pkgs/pkg-set.dhall
 extra-doc-files: README.md
                  docs/manual.tex
                  CHANGELOG.md
